# siocat

./: README.md  config_connection.example.json  pyproject.toml
siocat/: __main__.py  siocat.py
siocat/utils/: parser.py
